--- a/src/app/simulations/xpa/xpa.component.scss
+++ b/src/app/simulations/xpa/xpa.component.scss
@@ -2,7 +2,6 @@
 
 .mat-tab-group {
     width: 100%;
-    height: 100%;
 }
 
 .mat-tab-body-wrapper {
